    directive and read the query parameters from the redirect environment
    variable.  This lets one use SPNEGO as the default and fall back on
    password authentication if it fails.  To support this feature, there
    is an additional template variable for the login template,
    script_name, that should be used as the action of the login form.

 *) Rewrote the WebAuth protocol documentation in RFC 2629 XML.  In the
    process, edited it extensively for consistency of terminology, updated
    it in a few places, and clarified the wording.

 *) Updated the Kerberos library probes in configure to use krb5-config
    where appropriate and to check for krb5support (MIT Kerberos 1.4) if
    krb5-config isn't available.

 *) Added --enable-reduced-depends to configure to request the minimal
    possible shared library dependencies be encoded at run-time.  This is
    for systems that properly implement transitive shared library
    dependencies, in order to minimize shared library conflicts introduced
    by SONAME changes and upgrades (mainly for Linux distribution
    packagers).

 *) The public interface for the libwebauth library now uses char *
    uniformly instead of unsigned char *, since using the latter is too
    annoying and causes too many compiler warnings.

 *) Ask the linker to be sure that all external references are defined
    when linking the Apache modules on Linux.

 *) Removed the old workaround for libgcc dependencies in libraries when
    building with a non-gcc compiler.  gcc has used a shared libgcc for a
    long time and this was always an edge case.

 *) mod_webkdc doesn't need to include cURL headers; it never uses cURL.

 *) Cleaned up lots of compiler warnings.  All of WebAuth now builds under
    gcc -Wall without warnings.

 *) Lots of general documentation updates for clarity and style.

 *) Removed some Stanford-specific parts of doc/install-webkdc since we
    don't need instructions for what to do at Stanford any more.